[Bug #20468] More strictly check loop variable

Prohibit a constant and safe navigation call as a loop variable of
`for`.